# cognitive-reflection-llm

./: README.md  agent_with_model_responses.csv  agent_with_model_responses2.csv  cot_with_model_responses.csv  cot_with_model_responses2.csv  crt_dataset.csv  crt_with_model_responses.csv  crt_with_model_responses2.csv  crt_with_model_responses3.csv  evaluate_gemma_2b.ipynb  evaluate_groq.ipynb  evaluate_groq_cot.ipynb  evaluate_groq_reflexion.ipynb  evaluate_hf.ipynb  model_responses_analysis.ipynb  pyproject.toml
