[tool.poetry]
name = "cognitive-reflection-llm"
version = "0.1.0"
description = ""
authors = ["WojtAcht <wachtelik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.3"
pre-commit = "^3.6.2"
nbformat = "^5.10.3"
groq = "^0.5.0"
pandas = "^2.2.2"
setuptools = "^69.5.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
statsmodels = "^0.14.2"
matplotlib = "^3.8.4"
retry = "^0.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
